# Multi-Robot-Leader-Follower-Path-Tracking-

./: CMakeLists.txt  README.md  package.xml
launch/: main.launch  multi_turtlebot3_project_1.launch  test.launch
msg/: path_message.msg
scripts/: cubicpath.py  cubicpath_planning.py  launcher.py  robot.py  robots_controller.py
