<?xml version="1.0"?>
<package format="2">
  <name>robotics_2_project</name>
  <version>0.0.0</version>
  <description>The robotics_2_project package</description>

  <maintainer email="antonio@todo.todo">antonio</maintainer>

  <license>TODO</license>
  <author email="a.camposeo3@studenti.poliba.it">Antonio Camposeo</author> 
  <author email="e.leo2@studenti.poliba.it">Elviro Leo</author>
  <author email="i.olivieri1@studenti.poliba.it">Ignazio Olivieri</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
